z3c.saconfig
************

0.11 (unreleased)
=================

- works with sqlalchemy >= 0.5
 (would'nt work with sqlalchemy > 5 prior)

0.10 (2010-01-18)
=================

- Support current ZTK code

- engine.echo must default to None for SQLAlchemy to honor
  logging.getLogger("sqlalchemy.engine").setLevel(...)

- Do not enable convert_unicode by default. This option changes
  standard SQLAlchemy behaviour by making String type columns return
  unicode data.  This can be especially painful in Zope2 environments
  where unicode is not always accepted.

- Add a convert_unicode option to the zcml engine statement, allowing
  people who need convert_unicode to enable it.

0.9.1 (2009-08-14)
==================

- Include documentation on PyPI.

- Small documentation tweaks.

0.9 (2009-08-14)
================

- Initial public release.